@@ -1,3 +1,8 @@
+2006-08-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* include/avr/sleep.h: Fix the entry for the ATtiny2313, the revision
+	I datasheet was indeed correct.
+
 2006-08-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	Add the new "asmdemo" example.  It demonstrates how C and assembly
